# GestureTimer

./: .gitignore  LICENSE  README.md  icon.clip  main.py
simple/: index.html  main.js  package-lock.json  package.json  preload.js  styles.css  vite.config.js
simple/src/: _app_tail.js  bridge.js  main.js  styles.css
simple/src-tauri/: Cargo.toml  tauri.conf.json
simple/src-tauri/capabilities/: default.json
simple/src-tauri/icons/: icon.icns
simple/src-tauri/src/: lib.rs  main.rs
