[package]
name = "gesture-timer"
version = "1.2.0"
description = "GestureTimer"
authors = ["you"]
edition = "2021"

[lib]
name = "sketch_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
base64 = "0.22"
rfd = "0.15"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
